fixed patch for raspis arm architecture

--- a/Makefile.patch
+++ b/Makefile.patch
@@ -8,7 +8,7 @@
 -LIB64=$(NATIVELIB)-$(PLATFORM)-x86_64.$(LIBEXT)
 -M32=@M32@
 -M64=@M64@
-+LIB=$(NATIVELIB)-$(PLATFORM).$(LIBEXT)
++LIB=$(NATIVELIB)-$(PLATFORM)-arm.$(LIBEXT)
  JARFILE=juds-$(VERSION).jar
  UNIJARFILE=juds-$(VERSION)-universal.jar
  
